Current:
  * Code cleanups
  * Many bugfixes
  * Many performance improvements
  * More tooltips
  * The size of images can now be restricted to any amount of centimeters.
  * On a few operating systems: The network indicator icon now knows how much CPU
    power maxima uses.
  * wxMaxima can now handle requests to display raw lisp elements.
  * A menu containing the most important commands for lists.
  * A drop-down box for changing cell styles
  * Autosave is now enabled by default on new installs.
  * If an input cell is hidden and has no output it now is no more displayed
    as a blank vertical space.
  * Dropped the autotools as the cmake build of wxMaxima is way more stable.

17.10:
  * Jump to the char containing the error on encountering unmatched parenthesis.
  * Try to place the cursor near the error in all other cases.
  * Attempt to mark the whole error message in red. This is bound to fail in
    some cases as maxima sometimes only sends part of an error message through
    the error() command. But it is better than nothing.
  * Detect and mark most warnings.
  * A "evaluate cells below" right-click-menu item.
  * Autosave now even works for unsaved documents adding them to the
    "recent documents" list if needed.
  * Big parenthesis are now drawn using unicode characters, if available.
  * Nicer integral, Product and Sum signs, optionally including antialiassing
    even if no font provides them.
  * MouseOver tooltips for some of the more exotic worksheet items.
  * A "Copy as svg" function that is as good as wxSVGFileDc allows us to be.
  * Worksheet objects now can provide their own ToolTips.
  * Config Dialogue: An editor for the startup file.
  * It is now possible to select which formats "Ctrl+C" should place data on
    the clipboard in.
  * Now multiple animations can run concurrently and can be told to autostart.
  * A menu entry that allows to select 1D and ASCII Art Maths
  * Recent files that currently don't exist are grayed out now.