@@ -1200,6 +1200,7 @@ void MathCtrl::OnMouseRightDown(wxMouseEvent &event)
         }
         popupMenu->AppendCheckItem(popid_auto_answer, _("Automatically answer questions"),
                                    _("Automatically fill in answers known from the last run"));
+        // TODO: Do we need to check or uncheck this item sometimes?
         if(dynamic_cast<GroupCell *>(m_cellPointers.m_selectionStart)->GetGroupType() == GC_TYPE_IMAGE)
         {
           popupMenu->AppendSeparator();
