@@ -3,6 +3,7 @@ Current:
   * Many bugfixes
   * Many performance improvements
   * More tooltips
+  * TableOfContents: A right-click menu item that allows to toggle display of section numbers
   * The size of images can now be restricted to any amount of centimeters.
   * On a few operating systems: The network indicator icon now knows how much CPU
     power maxima uses.
